syntax = "proto3";

package user_service;

import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
service UserService {
  rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerResponse);
  rpc GetCustomerByEmail (GetCustomerByEmailRequest) returns (CreateCustomerResponse);
  rpc GetCustomers (GetCustomersRequest) returns (GetCustomersResponse);
  rpc DeleteCustomer (DeleteCustomerRequest) returns (DeleteCustomerResponse);
  rpc GetCustomerCredentials (GetCustomerByEmailRequest) returns (CustomerCredentialsResponse);
}

message CreateCustomerRequest {
  string name     = 1 [(validate.rules).string = { min_len: 1 }];
  string email    = 2 [(validate.rules).string = { email: true }];
  string password = 3 [(validate.rules).string = { min_len: 6 }];
  string phone    = 4;
  string address  = 5;
  string avatar_url = 6;
}
message DeleteCustomerRequest {
 string email = 1 [(validate.rules).string = { email: true }];
}
message GetCustomerByEmailRequest {
  string email = 1 [(validate.rules).string = { email: true }];
}
message CreateCustomerResponse {
  string name = 1;
  string email = 2;
  string role = 3;
  string status = 4;
  string phone = 5;
  string address = 6;
  string avatar_url = 7;
  bool is_deleted= 8;
}
message DeleteCustomerResponse {
  string msg = 1;
}
message GetCustomersRequest {}
message GetCustomersResponse {
  repeated CreateCustomerResponse customers = 1;
}

message CustomerCredentialsResponse {
 string email=1;
 string password=2;
 string status =3;
 string role=4;
 bool is_deleted =5;
 google.protobuf.Timestamp password_changed_at=6;
}